--- a/src/main/webapp/WEB-INF/views/topicView/new.html
+++ b/src/main/webapp/WEB-INF/views/topicView/new.html
@@ -15,10 +15,10 @@
             <input type="text" th:field="*{title}" id="title" class="form-input">
         </div>
 
-        <button type="submit" class="button">Add new  client</button>
+        <button type="submit" class="button">Add topic</button>
 
     </form>
-    <form  th:method="GET" th:action="@{/clients}">
+    <form  th:method="GET" th:action="@{/topics}">
         <button type="submit" class="button">Back to list</button>
     </form>
 </div>
