--- a/src/main/webapp/WEB-INF/views/topicView/indexPage.html
+++ b/src/main/webapp/WEB-INF/views/topicView/indexPage.html
@@ -40,6 +40,20 @@
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
+
+              <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
+                    <div class="u-container-layout u-container-layout-1">
+                        <div class="u-container-layout u-container-layout-1">
+                            <p th:text="'Topic\'s titles: '" class = text-list>name</p>
+                            <div th:each="topic: ${TopicsList}" class = div-index-list>
+                                <p th:text="'Title: ' + ${topic.getTitle()}" class = text-list>name</p>
+                                <form  th:action="@{/topics/{id}(id=${topic.getId()})}">
+                                    <button type="submit" class="button text-list">Show</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+              </div>
                 <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                     <div class="u-container-layout u-container-layout-2">
                         <div class="u-container-layout u-container-layout-2">
